--- a/app/src/main/res/layout/activity_update_decorater.xml
+++ b/app/src/main/res/layout/activity_update_decorater.xml
@@ -1,43 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/dj2"
+    android:background="@drawable/wd2"
     android:orientation="vertical">
 
 
     <EditText
-        android:id="@+id/et_djname"
+        android:id="@+id/et_decoratername"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
-        android:hint="Dj name"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:hint="Decorater name"
         android:textColorHint="#000" />
 
 
 
     <EditText
-        android:id="@+id/et_djloc"
+        android:id="@+id/et_decoraterloc"
         android:layout_width="match_parent"
         android:layout_height="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
-        android:hint="  location"
+        android:hint=" Decorater location"
         android:textColorHint="#000" />
 
     <EditText
-        android:id="@+id/et_djservices"
+        android:id="@+id/et_decoraterservices"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-
         android:layout_marginTop="60dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
         android:hint="services"
@@ -45,30 +48,31 @@
 
 
     <EditText
+        android:id="@+id/et_decoraterprice"
         android:layout_width="match_parent"
         android:layout_height="30dp"
+
         android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
         android:hint="price"
-        android:id="@+id/et_djprice"
 
         android:textColorHint="#000" />
 
     <Button
-        android:id="@+id/save_dj"
+        android:id="@+id/save_decoration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/price"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/price"
+        android:layout_margin="30dp"
+        android:onClick="update_decorater"
+        android:layout_gravity="center"
         android:layout_marginBottom="30dp"
         android:layout_marginTop="45dp"
         android:text=" save"
-        android:layout_gravity="center"
-        android:onClick="update_dj"
+
 
         />
 </LinearLayout>
-
