--- a/app/src/main/res/layout/activity_update_designer.xml
+++ b/app/src/main/res/layout/activity_update_designer.xml
@@ -6,37 +6,36 @@
     android:id="@+id/activity_main2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/dj2"
+    android:background="@drawable/wd2"
     android:orientation="vertical">
 
 
     <EditText
-        android:id="@+id/et_djname"
+        android:id="@+id/et_designername"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
-        android:hint="Dj name"
+        android:hint="designer's name"
         android:textColorHint="#000" />
 
 
 
     <EditText
-        android:id="@+id/et_djloc"
+        android:id="@+id/et_designerloc"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:layout_marginTop="50dp"
+                android:layout_marginTop="50dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
-        android:hint="  location"
+        android:hint=" designer's location"
         android:textColorHint="#000" />
 
     <EditText
-        android:id="@+id/et_djservices"
+        android:id="@+id/et_designerservices"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-
         android:layout_marginTop="60dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
@@ -45,6 +44,7 @@
 
 
     <EditText
+        android:id="@+id/et_designerprice"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_centerHorizontal="true"
@@ -52,12 +52,11 @@
         android:background="@drawable/rectangle"
         android:gravity="center"
         android:hint="price"
-        android:id="@+id/et_djprice"
 
         android:textColorHint="#000" />
 
     <Button
-        android:id="@+id/save_dj"
+        android:id="@+id/save_designer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/price"
@@ -67,7 +66,8 @@
         android:layout_marginTop="45dp"
         android:text=" save"
         android:layout_gravity="center"
-        android:onClick="update_dj"
+        android:onClick="update_designer"
+
 
         />
 </LinearLayout>
