--- a/app/src/main/res/layout/activity_update_photographer.xml
+++ b/app/src/main/res/layout/activity_update_photographer.xml
@@ -6,37 +6,36 @@
     android:id="@+id/activity_main2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/dj2"
+    android:background="@drawable/photographer1"
     android:orientation="vertical">
 
 
     <EditText
-        android:id="@+id/et_djname"
+        android:id="@+id/et_photographername"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
-        android:hint="Dj name"
+        android:hint="photographer's name"
         android:textColorHint="#000" />
 
 
 
     <EditText
-        android:id="@+id/et_djloc"
+        android:id="@+id/et_photographerloc"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
-        android:hint="  location"
+        android:hint=" photographer's location"
         android:textColorHint="#000" />
 
     <EditText
-        android:id="@+id/et_djservices"
+        android:id="@+id/et_photographerservices"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-
         android:layout_marginTop="60dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
@@ -45,29 +44,31 @@
 
 
     <EditText
+        android:id="@+id/et_photographerprice"
         android:layout_width="match_parent"
         android:layout_height="30dp"
+
         android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
         android:hint="price"
-        android:id="@+id/et_djprice"
 
         android:textColorHint="#000" />
 
     <Button
-        android:id="@+id/save_dj"
+        android:id="@+id/save_photographer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/price"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/price"
         android:layout_marginBottom="30dp"
+        android:onClick="update_photographer"
         android:layout_marginTop="45dp"
-        android:text=" save"
         android:layout_gravity="center"
-        android:onClick="update_dj"
+        android:text=" save"
+
 
         />
 </LinearLayout>
