--- a/app/src/main/res/layout/activity_update_salon.xml
+++ b/app/src/main/res/layout/activity_update_salon.xml
@@ -1,42 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/dj2"
+    android:background="@drawable/salon"
     android:orientation="vertical">
 
 
     <EditText
-        android:id="@+id/et_djname"
+        android:id="@+id/et_salonname"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
-        android:hint="Dj name"
+        android:hint="salon name"
         android:textColorHint="#000" />
 
 
 
     <EditText
-        android:id="@+id/et_djloc"
+        android:id="@+id/et_salonlocation"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
-        android:hint="  location"
+        android:hint=" salon location"
         android:textColorHint="#000" />
 
     <EditText
-        android:id="@+id/et_djservices"
+        android:id="@+id/et_salonservices"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-
         android:layout_marginTop="60dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
@@ -45,29 +43,31 @@
 
 
     <EditText
+        android:id="@+id/et_salonprice"
         android:layout_width="match_parent"
         android:layout_height="30dp"
+
         android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
         android:hint="price"
-        android:id="@+id/et_djprice"
 
         android:textColorHint="#000" />
 
     <Button
-        android:id="@+id/save_dj"
+        android:id="@+id/save_salon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/price"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/price"
         android:layout_marginBottom="30dp"
+        android:layout_gravity="center"
+        android:onClick="update_salon"
         android:layout_marginTop="45dp"
         android:text=" save"
-        android:layout_gravity="center"
-        android:onClick="update_dj"
+
 
         />
 </LinearLayout>
