--- a/app/src/main/res/layout/activity_userlogin.xml
+++ b/app/src/main/res/layout/activity_userlogin.xml
@@ -9,7 +9,7 @@
 
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/user_email"
         android:layout_width="300dp"
         android:layout_height="30dp"
         android:layout_alignParentTop="true"
@@ -22,13 +22,13 @@
 
 
     <EditText
-        android:id="@+id/cpass"
+        android:id="@+id/user_pass"
         android:layout_width="300dp"
         android:layout_height="30dp"
 
-        android:layout_alignLeft="@+id/email"
-        android:layout_alignStart="@+id/email"
-        android:layout_below="@+id/email"
+        android:layout_alignLeft="@+id/user_email"
+        android:layout_alignStart="@+id/user_email"
+        android:layout_below="@+id/user_email"
         android:layout_marginTop="66dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
@@ -39,7 +39,7 @@
         android:id="@+id/register"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/cpass"
+        android:layout_below="@+id/user_pass"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="59dp"
         android:background="@drawable/stroke"
