--- a/app/src/main/res/layout/salon_cell.xml
+++ b/app/src/main/res/layout/salon_cell.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
-
+        android:id="@+id/salon_lay"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
