--- a/app/src/main/res/layout/venue_cell.xml
+++ b/app/src/main/res/layout/venue_cell.xml
@@ -11,7 +11,7 @@ android:elevation="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
-
+android:id="@+id/venue_lay"
         android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
