--- a/app/src/main/res/layout/activity_view_dj.xml
+++ b/app/src/main/res/layout/activity_view_dj.xml
@@ -1,15 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wow">
-
+    android:background="@drawable/hehe">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SELECT venue"
+        android:text="SELECT dj"
         android:textSize="20dp"
         android:textAllCaps="true"
         android:layout_margin="20dp"
@@ -18,16 +18,29 @@
         android:textStyle="bold"
         android:layout_centerHorizontal="true"/>
 
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/venue_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <Button
+        android:id="@+id/skip_button"
+        android:layout_width="wrap_content"
+android:onClick="skip_dj"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/skip_button"
-        android:layout_marginTop="20dp">
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="44dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="55dp"
+        android:text=" skip"
+
+        />
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_below="@id/skip_button"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:id="@+id/dj_recycler">
 
     </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
+
