--- a/app/src/main/res/layout/activity_user_login_step2.xml
+++ b/app/src/main/res/layout/activity_user_login_step2.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main2"
     android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     android:layout_height="match_parent"
     android:background="@drawable/wow">
 
@@ -16,7 +18,7 @@
         android:textSize="40dp"
         android:layout_centerHorizontal="true"
         android:layout_margin="10dp"
-        android:id="@+id/textt"
+        android:id="@+id/text"
         />
 
     <EditText
@@ -27,9 +29,20 @@
         android:textColorHint="#000"
         android:layout_centerHorizontal="true"
         android:background="@drawable/rectangle"
-        android:id="@+id/user"
+        android:id="@+id/name_et"
         android:layout_marginTop="30dp"
         android:layout_below="@id/textt"
+        />
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="30dp"
+        android:hint= "enter Phone no"
+        android:gravity="center"
+        android:textColorHint="#000"
+        android:background="@drawable/rectangle"
+        android:id="@+id/number_et"
+        android:layout_marginTop="30dp"
+
         />
 
     <EditText
@@ -40,9 +53,8 @@
         android:textColorHint="#000"
         android:layout_centerHorizontal="true"
         android:background="@drawable/rectangle"
-        android:id="@+id/email"
-        android:layout_below="@id/user"
-        android:layout_marginTop="50dp"
+        android:id="@+id/email_et"
+        android:layout_marginTop="30dp"
         />
 
     <EditText
@@ -53,9 +65,8 @@
         android:textColorHint="#000"
         android:layout_centerHorizontal="true"
         android:background="@drawable/rectangle"
-        android:id="@+id/pass"
-        android:layout_marginTop="50dp"
-        android:layout_below="@id/email"
+        android:id="@+id/pass_et"
+        android:layout_marginTop="30dp"
         />
 
     <EditText
@@ -66,10 +77,8 @@
         android:textColorHint="#000"
         android:layout_centerHorizontal="true"
         android:background="@drawable/rectangle"
-        android:id="@+id/cpass"
-        android:layout_below="@id/pass"
-
-        android:layout_marginTop="50dp"
+        android:id="@+id/cpass_et"
+        android:layout_marginTop="30dp"
         />
 
     <Button
@@ -80,10 +89,11 @@
         android:layout_centerInParent="true"
         android:id="@+id/register"
         android:text="Submit"
+        android:onClick="register"
         android:textColor="#fff"
         android:layout_margin="20dp"
         />
 
 
-</RelativeLayout>
+</LinearLayout>
 
