--- a/app/src/main/res/layout/salon_cell.xml
+++ b/app/src/main/res/layout/salon_cell.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:elevation="10dp"
-    android:background="@drawable/rectangle"
+    android:background="#00111111"
     android:layout_height="wrap_content"
 
     android:layout_margin="10dp">
@@ -62,11 +62,5 @@
 
 
     </LinearLayout>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#111"
-            android:text="DELETE"
-            android:layout_marginLeft="20dp"
-            />        </LinearLayout>
+             </LinearLayout>
 </android.support.v7.widget.CardView>
