--- a/app/src/main/res/layout/view_book_event.xml
+++ b/app/src/main/res/layout/view_book_event.xml
@@ -11,7 +11,7 @@
 
 
     <Button
-        android:id="@+id/venue_button"
+        android:id="@+id/venue_book"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -26,12 +26,12 @@
 
 
     <Button
-        android:id="@+id/decoraters"
+        android:id="@+id/decoraters_book"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/venue_button"
+        android:layout_below="@+id/venue_book"
         android:layout_marginEnd="37dp"
         android:layout_marginRight="37dp"
         android:text=" decoraters"
@@ -39,59 +39,59 @@
         />
 
     <Button
-        android:id="@+id/caterers"
+        android:id="@+id/caterers_book"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/venue_button"
-        android:layout_alignStart="@+id/venue_button"
-        android:layout_below="@+id/decoraters"
+        android:layout_alignLeft="@+id/venue_book"
+        android:layout_alignStart="@+id/venue_book"
+        android:layout_below="@+id/decoraters_book"
         android:layout_marginTop="25dp"
         android:text="caterers"
         android:onClick="caterers"
         />
 
     <Button
-        android:id="@+id/dj"
+        android:id="@+id/dj_book"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/decoraters"
-        android:layout_alignRight="@+id/decoraters"
-        android:layout_below="@+id/caterers"
+        android:layout_alignEnd="@+id/decoraters_book"
+        android:layout_alignRight="@+id/decoraters_book"
+        android:layout_below="@+id/caterers_book"
         android:text=" Dj"
         android:onClick="Dj"
         />
 
     <Button
-        android:id="@+id/photographer"
+        android:id="@+id/photographer_book"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/caterers"
-        android:layout_alignStart="@+id/caterers"
-        android:layout_below="@+id/dj"
+        android:layout_alignLeft="@+id/caterers_book"
+        android:layout_alignStart="@+id/caterers_book"
+        android:layout_below="@+id/dj_book"
         android:layout_marginTop="20dp"
         android:text=" photographer's"
         android:onClick="photographers"
         />
 
     <Button
-        android:id="@+id/designers"
+        android:id="@+id/designers_book"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/dj"
-        android:layout_alignRight="@+id/dj"
-        android:layout_below="@+id/photographer"
+        android:layout_alignEnd="@+id/dj_book"
+        android:layout_alignRight="@+id/dj_book"
+        android:layout_below="@+id/photographer_book"
         android:layout_marginTop="31dp"
         android:text=" designers"
         android:onClick="designers"
         />
 
     <Button
-        android:id="@+id/saloon"
+        android:id="@+id/saloon_book"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/caterers"
+        android:layout_alignEnd="@+id/caterers_book"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/caterers"
+        android:layout_alignRight="@+id/caterers_book"
         android:layout_marginBottom="21dp"
         android:text=" salon's"
         android:onClick="salon"
