--- a/app/src/main/res/layout/date_cell.xml
+++ b/app/src/main/res/layout/date_cell.xml
@@ -5,6 +5,10 @@
     android:layout_height="wrap_content">
 <LinearLayout
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#00000000">
+    <LinearLayout
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/book_lay"
     android:background="@drawable/gradient_rectangle"
@@ -36,5 +40,5 @@
         android:textColor="#111"
         />
 </LinearLayout>
-
+</LinearLayout>
 </android.support.v7.widget.CardView>
